--- a/RazorLib/Shared/ScriptContentionComponent.razor
+++ b/RazorLib/Shared/ScriptContentionComponent.razor
@@ -2,7 +2,7 @@
 @using MudBlazor;
 
 @inject ILogger<ScriptContentionComponent> _logger
-@* @inject IRefitContentionsService _refit *@
+@inject IContentionsService _contention
 @inject ISnackbar _snackbar
 
 @inherits BlazorBusyComponentBaseModel
@@ -98,26 +98,27 @@ else
 
     async Task SetContention(int script_master, int script_slave, bool is_set)
     {
-        // ApiResponse<IdsResponseModel> rest = await _refit.ContentionSet(new UpdateContentionRequestModel() { IsSet = is_set, ScriptMasterId = script_master, ScriptSlaveId = script_slave });
-
-        // if (rest.Content?.Ids is null)
-        // {
-        //     _snackbar.Add("rest.Content?.Ids is null ошибка {E5088810-40A1-4AFA-BF4E-F19635027F16}", Severity.Error, conf => conf.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
-        //     return;
-        // }
-        // _snackbar.Add(is_set ? "Выбран" : "Отменён", is_set ? Severity.Success : Severity.Info, conf => conf.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
-        // SelectedIds = rest.Content.Ids;
+        IdsResponseModel rest = await _contention.ContentionSet(new ContentionUpdateModel() { IsSet = is_set, ScriptMasterId = script_master, ScriptSlaveId = script_slave });
+        _snackbar.ShowMessagesResponse(rest.Messages);
+        if (rest.Ids is null)
+        {
+            _snackbar.Add("rest.Ids is null ошибка {E5088810-40A1-4AFA-BF4E-F19635027F16}", Severity.Error, conf => conf.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
+            return;
+        }
+        _snackbar.Add(is_set ? "Выбран" : "Отменён", is_set ? Severity.Success : Severity.Info, conf => conf.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
+        SelectedIds = rest.Ids;
     }
 
     public async Task Rest(int script_id)
     {
-        // ApiResponse<IdsResponseModel> rest = await _refit.ContentionsGetByScript(script_id);
-        // if (rest.Content?.Ids is null)
-        // {
-        //     _snackbar.Add("rest.Content?.Ids is null ошибка {CC161D89-B6C7-4436-8CB6-E83ECD10A509}", Severity.Error, conf => conf.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
-        //     return;
-        // }
-        // SelectedIds = rest.Content.Ids;
+        IdsResponseModel rest = await _contention.ContentionsGetByScript(script_id);
+        _snackbar.ShowMessagesResponse(rest.Messages);
+        if (rest.Ids is null)
+        {
+            _snackbar.Add("rest.Ids is null ошибка {CC161D89-B6C7-4436-8CB6-E83ECD10A509}", Severity.Error, conf => conf.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
+            return;
+        }
+        SelectedIds = rest.Ids;
         StateHasChanged();
     }
 }
