--- a/ab-log-rc/Pages/HardwareConfigPage.razor
+++ b/ab-log-rc/Pages/HardwareConfigPage.razor
@@ -14,7 +14,9 @@
             <HardwareFormComponent />
         </TabComponent>
         <TabComponent Tooltip="Ретранслятор" Title="Ретранслятор">
-            <HardwareTranslateMainLayerComponent PagePath="/" />
+            <CascadingValue Value="@("/")">
+                <HardwareTranslateMainLayerComponent />
+            </CascadingValue>
         </TabComponent>
     </TabSetComponent>
 </CascadingValue>
