--- a/RazorLib/Shared/html/HtmlInputTranslatorComponent.razor
+++ b/RazorLib/Shared/html/HtmlInputTranslatorComponent.razor
@@ -14,11 +14,20 @@
         switch (InputFormType)
         {
             case InputFormTypesEnum.Submit:
-                <button @onclick="() => SendForm(InputName, InputValue)" type="button" class="btn btn-warning">@InputValue</button>
+                <button @onclick="() => SendForm(InputName, InputValue)" type="button" class="btn btn-warning mb-1">@InputValue</button>
                 break;
             case InputFormTypesEnum.Checkbox:
                 //bool is_checked = NodeData.Attributes?.Any(x => x.Key.Equals("checked", StringComparison.OrdinalIgnoreCase)) == true;
                 <HtmlCheckboxTranslatorComponent SetValueHandler="SetInputValue" InputName="@InputName" InputValue="@InputValue" />
+                break;
+            case InputFormTypesEnum.Hidden:
+                <div class="@(IsDebug ? "border border-primary-subtle mb-3 p-2" : "d-none")">
+                    <label for="hidden-input_@(InputName)" class="form-label">Скрытое поле</label>
+                    <div class="input-group">
+                        <span class="input-group-text" id="basic-addon-span_@(InputName)">@InputName</span>
+                        <input readonly disabled type="text" class="form-control" id="hidden-input_@(InputName)" aria-describedby="basic-addon-span_@(InputName)" value="@InputValue">
+                    </div>
+                </div>
                 break;
             default:
                 string _size = NodeData.Attributes?.FirstOrDefault(x => x.Key.Equals("size", StringComparison.OrdinalIgnoreCase)).Value ?? "20";
@@ -27,12 +36,12 @@
                 if (string.IsNullOrWhiteSpace(_maxlength))
                 {
                     <input type="@(InputFormType.ToString().ToLower())" @bind="InputValue" name="@InputName" class="form-control" size="@_size" aria-describedby="@($"{InputName}Help")" />
-                    <div id="@($"{InputName}Help")" class="form-text mb-3">@((MarkupString)(_conf.MetadataInput?.FirstOrDefault(x => x.Key.Equals(InputName, StringComparison.OrdinalIgnoreCase)).Value ?? "error {CCD7D4DF-E09A-4F3B-8DA4-2B724B98B537}"))</div>
+                    <div id="@($"{InputName}Help")" class="form-text mb-3">@((MarkupString)(_conf.AboutInputInfo(InputName, PagePath) ?? $"error `{InputName}` CCD7D4DF-E09A-4F3B-8DA4-2B724B98B537"))</div>
                 }
                 else
                 {
                     <input type="@(InputFormType.ToString().ToLower())" @bind="InputValue" name="@InputName" class="form-control" size="@_size" maxlength="@_maxlength" aria-describedby="@($"{InputName}Help")" />
-                    <div id="@($"{InputName}Help")" class="form-text mb-3">@((MarkupString)(_conf.MetadataInput?.FirstOrDefault(x => x.Key.Equals(InputName, StringComparison.OrdinalIgnoreCase)).Value ?? "error {F523907C-79FA-407F-A3F7-E1F41FBE0652}"))</div>
+                    <div id="@($"{InputName}Help")" class="form-text mb-3">@((MarkupString)(_conf.AboutInputInfo(InputName, PagePath) ?? $"error `{InputName}` F523907C-79FA-407F-A3F7-E1F41FBE0652"))</div>
                 }
 
                 break;
@@ -56,7 +65,7 @@
                 </CascadingValue>
             }
         </select>
-        <div id="@($"{InputName}Help")" class="form-text mb-3">@((MarkupString)(_conf.MetadataInput?.FirstOrDefault(x => x.Key.Equals(InputName, StringComparison.OrdinalIgnoreCase)).Value ?? "error {54BBE107-8568-473C-9ADD-5EF18F89D850}"))</div>
+        <div id="@($"{InputName}Help")" class="form-text mb-3">@((MarkupString)(_conf.AboutInputInfo(InputName, PagePath) ?? $"error `{InputName}` 54BBE107-8568-473C-9ADD-5EF18F89D850"))</div>
         break;
     default:
         <HtmlNodeTranslatorComponent NodeData="NodeData" />
@@ -78,6 +87,12 @@
 
     [CascadingParameter]
     public required Action<string?, string?> SendForm { get; set; }
+
+    /// <summary>
+    /// Адрес страницы (URI) в управляющем контролере
+    /// </summary>
+    [CascadingParameter]
+    public required string PagePath { get; set; }
 
     public InputFormTypesEnum InputFormType { get; private set; } = InputFormTypesEnum.Text;
 
@@ -188,4 +203,12 @@
                 FormContext.DataContext.Add(input_name, val);
         }
     }
+
+#if DEBUG
+    bool IsDebug => true;
+#else
+    bool IsDebug => false;
+#endif
+
+
 }
