--- a/RazorLib/Shared/html/HtmlCheckboxTranslatorComponent.razor
+++ b/RazorLib/Shared/html/HtmlCheckboxTranslatorComponent.razor
@@ -19,7 +19,7 @@
     /// <summary>
     /// Адрес страницы (URI) в управляющем контролере
     /// </summary>
-    [CascadingParameter]
+    [CascadingParameter(Name = "PagePath")]
     public required string PagePath { get; set; }
 
     public bool isChecked
