--- a/ab-log.web/Components/Pages/HardwareConfigPage.razor
+++ b/ab-log.web/Components/Pages/HardwareConfigPage.razor
@@ -8,7 +8,7 @@
             <HardwareFormComponent />
         </TabComponent>
         <TabComponent Tooltip="Ретранслятор" Title="Ретранслятор">
-            <CascadingValue Value="@("/")">
+            <CascadingValue Value="@("/")" Name="PagePath">
                 <HardwareTranslateMainLayerComponent />
             </CascadingValue>
         </TabComponent>
