--- a/RazorLib/Shared/hardwares/PortViewHardwareComponent.razor
+++ b/RazorLib/Shared/hardwares/PortViewHardwareComponent.razor
@@ -25,7 +25,7 @@ else
             <button @onclick="OpeningToggle" type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
-            <HardwareNavButtonComponent @ref="refBtn" PagePath="@($"?pt={Port.PortNum}")" Text="@(Port.Name)" AutoLoadAndExpand="true" />
+            <HardwareNavButtonComponent @ref="refBtn" Text="@(Port.Name)" AutoLoadAndExpand="true" />
         </div>
     </div>
     <div @onclick="OpeningToggle" class="offcanvas-backdrop fade show"></div>
