--- a/ab-log-rc/Pages/HardwareConfigPage.razor
+++ b/ab-log-rc/Pages/HardwareConfigPage.razor
@@ -14,7 +14,7 @@
             <HardwareFormComponent />
         </TabComponent>
         <TabComponent Tooltip="Ретранслятор" Title="Ретранслятор">
-            <CascadingValue Value="@("/")">
+            <CascadingValue Value="@("/")" Name="PagePath">
                 <HardwareTranslateMainLayerComponent />
             </CascadingValue>
         </TabComponent>
