--- a/RazorLib/Shared/html/HtmlCheckboxTranslatorComponent.razor
+++ b/RazorLib/Shared/html/HtmlCheckboxTranslatorComponent.razor
@@ -16,9 +16,7 @@
     [Parameter, EditorRequired]
     public required string InputValue { get; set; }
 
-    /// <summary>
-    /// Адрес страницы (URI) в управляющем контролере
-    /// </summary>
+    /// <inheritdoc/>
     [CascadingParameter(Name = "PagePath")]
     public required string PagePath { get; set; }
 
