--- a/RazorLib/Shared/settings/TelegramUsersListComponent.razor
+++ b/RazorLib/Shared/settings/TelegramUsersListComponent.razor
@@ -4,7 +4,7 @@
     <div class="card-body">
         <h5 class="card-title">Пользователи</h5>
         <h6 class="card-subtitle mb-2 text-body-secondary">Права доступа</h6>
-        <MudTable Loading="IsBusyProgress" ServerData="@(new Func<TableState, Task<TableData<UserModelDB>>>(ServerReload))" Dense="true" Hover="true"
+        <MudTable Loading="IsBusyProgress" ServerData="@(new Func<TableState, CancellationToken, Task<TableData<UserModelDB>>>(ServerReload))" Dense="true" Hover="true"
                   OnCommitEditClick="SaveElement" CanCancelEdit="true" RowEditPreview="BeckupEditItem" RowEditCancel="ResetItemToOriginalValues" @ref="table"
                   RowClass="cursor-pointer" RowClassFunc="@SelectedRowClassFunc" T="UserModelDB">
             <ToolBarContent>
